# wally

./: .gitignore  Cargo.toml  README.md  flake.nix
nix/: hm-module.nix  package.nix  shell.nix
wally/: Cargo.toml
wally-config/: Cargo.toml
wally-config/src/: general.rs  konachan.rs  lib.rs  util.rs  wallhaven.rs
wally-providers/: Cargo.toml
wally-providers/src/: lib.rs  providers.rs  util.rs
wally-providers/src/providers/: konachan.rs  pixiv.rs  wallhaven.rs
wally-providers/tests/: provider_test.rs
wally/src/: main.rs  meta.rs
