[workspace]
members = [
    "wally",
    "wally-config",
    "wally-providers"
] 
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.9.2"
tempfile = "3.0"
regex = "1.0"
clap = "4.5.53"
async-trait = "0.1.89"
facet = "0.34.0"
facet-kdl = "0.34.0"
miette = { version = "7", features = ["fancy"] }
paste = "1.0.15"
