[package]
name = "wally-providers"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
rand.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
