[package]
name = "wally"
version.workspace = true
edition.workspace = true

[dependencies]
clap = {workspace = true, features = ["derive"]}
wally-providers = { path = "../wally-providers" }
wally-config = { path = "../wally-config" }
rand.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
